test/fail/modexp6.mo
module A {
  let #foo = #foo
}
